syntax = "proto3";

package ai.metathings.service.evaluatord;
option go_package = "evaluatord";

import "validate/validate.proto";
import "github.com/nayotta/metathings/pkg/proto/deviced/model.proto";

import "model.proto";

message AddConfigsToTimerRequest {
	OpTimer timer = 1 [(validate.rules).message.required = true];
	repeated ai.metathings.service.deviced.OpConfig configs = 2;
}
